<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ee.soidutaja.soidutaja.MakeDriveActivity">

    <TextView
        android:id="@+id/chooseStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_drive_choose_start_text"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/startSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/chooseEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_drive_choose_end_text"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/endSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dateButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/make_drive_dateButton_text" />

        <Button
            android:id="@+id/timeButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="vali kellaaeg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="DD/MM"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="HOUR:MINUTE"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="Vali hind"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kohtade arv"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/priceField"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:inputType="number"
            android:hint="Hind" />

        <EditText
            android:id="@+id/spotsField"
            android:layout_width="60dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="Kohad" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lisainfo:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/additionalInfo"
            android:hint="Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/make_drive_nextButton_text" />

</LinearLayout>
