<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <Button
        android:layout_marginTop="200dp"
        android:id="@+id/driverButton"
        android:layout_gravity="center"
        android:text="@string/driverButton_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_gravity="center"
        android:id="@+id/passengerButton"
        android:text="@string/passengerButton_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/profileButton"
        android:text="profiil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
