...
        android:layout_gravity="center_horizontal" />

    <ListView

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/driverList"
        android:layout_marginTop="230dp"
 />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/passengerList"
        android:layout_weight="0.33"
        android:layout_marginTop="400dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
